--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude "META-INF/LICENSE"
+    }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
@@ -29,6 +37,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:5.1.0'
     implementation 'com.google.firebase:firebase-messaging:19.0.1'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -43,6 +52,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
 }
 apply plugin: 'com.google.gms.google-services'
 repositories {
